# midi-to-tci

./: LICENSE  README.md  pyproject.toml  requirements.txt
midi_to_tci/: config.json  config.py  midi_control.py
