[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "midi-to-tci"
version = "0.0.1"
dependencies = [
	"eesdr-tci",
	"python-rtmidi",
	"mido"
]
authors = [
	{ name="Matthew R. McDougal", email="ka0s@arrl.net"}
]
description = "Allows a MIDI controller to generate TCI commands to control a capable radio"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
	"Programming Language :: Python :: 3",
	"Development Status :: 3 - Alpha",
	"Framework :: AsyncIO",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: BSD License",
	"Operating System :: OS Independent",
	"Topic :: Communications :: Ham Radio"
]

[project.urls]
"Homepage" = "https://github.com/ars-ka0s/midi-to-tci"
"Bug Tracker" = "https://github.com/ars-ka0s/midi-to-tci/issues"
